style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

p {
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
    opacity: 0.7;
}

h3,
h4 {
    font-size: 24px;
    font-weight: 800;
    line-height: 36px;
}

a {
    color: black;
}

body {
    font-family: 'Azeret Mono';
}

main {
    background: rgb(255, 255, 255);
}

.section-1 {
    width: 1670px;
    height: 900px;
    background: url(assets/Hero-bg.png);
}

.section-1-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.sec-1-header {
    width: 910px;
    /* height: auto */
    text-align: center;
    font-size: 47px;
    font-weight: 800;
    line-height: 70px;
    margin: 24px 0;
}

.section-1-container img {
    width: 240px;
    height: 240px;
}

.sec-1-description {
    width: 998px;
    /* height: auto */
    background: none;
    text-align: center;
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
    opacity: 0.7;
    color: rgb(13, 19, 33);
}

.btn-1 {
    width: 270px;
    height: 65px;
    background: rgb(13, 19, 33);
    margin-top: 32px;
    padding: 21px 24px;
    border-radius: 8px;
    cursor: pointer;
    font-size: 20px;
    color: white;
}

.section-2 {
    width: 1140px;
    height: 1175px;
    background: rgba(13, 19, 33, 0.02);
    margin: 80px 150px auto 195px;
    border-radius: 16px;
}

.section-2 h4 {
    /* width/height inherited */
    background: none;
    font-size: 24px;
    font-weight: 700;
    line-height: 36px;
    color: rgba(13, 19, 33, 0.7);
}

.section-2 p {
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
    opacity: 0.7;
}

.header-of-section-2 {
    /* box size auto */
    background: none;
    display: flex;
    flex-direction: column;
    gap: 20px;
    text-align: center;
    margin-bottom: 20px;
}

.container {
    width: auto;
    height: auto;
    background: none;
    margin: 80px 97px;
}

.box-1-3 {
    width: 850px;
    height: 240px;
    background: linear-gradient(90deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
    margin: 48px;
    border-radius: 16px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.content-1-3 {
    width: 477px;
    height: 219px;
    background: none;
    display: flex;
    flex-direction: column;
    text-align: left;
    justify-content: space-between;
}

.box-1-3 img {
    width: 259.56px;
    height: 217.01px;
}

.box-2 {
    width: 850px;
    height: 240px;
    background: linear-gradient(270deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
    margin: 48px;
    border-radius: 16px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.content-2 {
    width: 477px;
    height: 219px;
    background: none;
    display: flex;
    flex-direction: column;
    text-align: left;
    justify-content: space-between;
}

.content-btn {
    width: 131px;
    height: 23px;
    background: none;
    padding: 12px 20px;
    font-family: 'Azeret Mono';
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    opacity: 0.7;
}

.section-3 {
    width: 1140px;
    height: 760px;
    background: rgba(13, 19, 33, 0.02);
    margin: 80px 150px auto 195px;
    border-radius: 16px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.sec-3-header {
    width: auto;
    height: auto;
    background: none;
    font-family: 'Azeret Mono';
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
    letter-spacing: 0;
    text-align: center;
    color: rgb(13, 19, 33);
}

.sec-3-header h2 {
    font-size: 32px;
    font-weight: 800;
    line-height: 37px;
}

.sec-3-header p {
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
    letter-spacing: 0;
    text-align: center;
    opacity: 0.7;
    color: rgb(13, 19, 33);
}

.section-3 .video img {
    width: 990px;
    height: 480px;
    padding: 32px;
    border-radius: 16px;
}

.section-4 {
    width: 1140px;
    height: 460px;
    background: none;
    margin: 80px 150px auto 195px;
    border-radius: 16px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: 48px;
    justify-content: center;
    align-items: center;
}

.sec-4-header {
    width: 852px;
    height: 113px;
    background: none;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.sec-4-header h3 {
    font-size: 32px;
    font-weight: 800;
    line-height: 37px;
}

.sec-4-header p {
    font-size: 16px;
    font-weight: 400;
    line-height: 26px;
    letter-spacing: 0;
    opacity: 0.7;
}

.card-container {
    width: 1140px;
    height: auto;
    background: none;
    display: flex;
    gap: 32px;
    justify-content: center;
}

.sec-4-box-1,
.sec-4-box-2,
.sec-4-box-3 {
    width: 364px;
    height: 299px;
    background: none;
    padding: 40px;
    border-radius: 16px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.sec-4-box-1 {
    background: rgba(255, 76, 30, 0.05);
}

.sec-4-box-2 {
    background: rgba(0, 76, 232, 0.05);
}

.sec-4-box-3 {
    background: rgba(255, 223, 0, 0.05);
}

.section-5 {
    width: 1140px;
    height: 870px;
    background: none;
    margin: 80px 150px auto 195px;
    /* border: 1px solid black; */
    border-radius: 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.sec-5-content-header {
    width: 900px;
    height: 113px;
    background: none;
    margin: 0 auto;
    text-align: center;
    /* border: 1px solid black; */
}

.sec-5-content-box {
    width: auto;
    height: 219px;
    background: rgb(255, 255, 255);
    padding: 40px;
    box-sizing: border-box;
    display: flex;
    gap: 25px;
    justify-content: space-around;
    align-items: center;
    border: 1px solid rgba(13, 19, 33, 0.15);
    border-radius: 16px;
}

.sec-5-content-box img {
    width: 94.78px;
    height: 84.41px;
}

section#support {
    width: 1140px;
    height: 315px;
    background: url(assets/handshake.jpg) center/cover no-repeat;
    margin: 80px 150px auto 195px;
    border: 1px solid black;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.support-header {
    width: 730px;
    height: 104px;
    background: none;
    text-align: center;
    color: white;
}

.support-header h3 {
    font-family: 'Azeret Mono';
    font-size: 32px;
    font-weight: 700;
    line-height: 36px;
    color: rgb(255, 255, 255);
}

.support-header p {
    opacity: 0.7;
}

input[type="text"] {
    width: 548px;
    height: 57px;
    background: rgb(255, 255, 255);
    text-align: center;
    border: 1px solid rgba(13, 19, 33, 0.15);
    border-radius: 8px;
}

input[type="button"] {
    width: 120px;
    height: 57px;
    background: rgb(255, 255, 255);
    border-radius: 8px;
}

footer {
    width: 100%;
    height: 100px;
    background: rgba(13, 19, 33, 0.03);
    position: absolute;
    display: flex;
    justify-content: space-around;
    align-items: center;
    border-radius: 16px;
}

.logo {
    width: auto;
    height: auto;
    background: none;
    display: flex;
    gap: 20px;
}

.logo img {
    height: 40px;
}

